--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "tw-elements": "^2.0.0",
     "use-debounce": "^10.0.1"
   },
   "devDependencies": {
