add register and login ui

--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@tailwindcss/forms": "^0.5.7",
     "@vercel/blob": "^0.23.4",
     "@vercel/postgres": "^0.8.0",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.8",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "tw-elements": "^2.0.0",
