--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.8",
     "jsonwebtoken": "^9.0.2",
-    "next": "14.2.5",
-    "next-auth": "^4.24.7",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "15.0.0-canary.56",
+    "next-auth": "5.0.0-beta.20",
+    "react": "19.0.0-rc-f38c22b244-20240704",
+    "react-dom": "19.0.0-rc-f38c22b244-20240704",
     "tw-elements": "^2.0.0",
-    "use-debounce": "^10.0.1"
+    "use-debounce": "^10.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
