--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.8",
     "jsonwebtoken": "^9.0.2",
+    "tailwindcss": "^3.4.1",
     "next": "15.0.0-canary.56",
     "next-auth": "5.0.0-beta.20",
     "react": "19.0.0-rc-f38c22b244-20240704",
